src/objects/Queue_User_Relationship__c.object
<CustomObject>
    <description>CSM - ACN - S-0007 - Queue User Relationship</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>AFU_Queue_Email__c</fullName>
        <description>CSM-US-0419-R&amp;D Automated Follow Up Email Enhancement</description>
        <label>AFU Queue Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OLA Related Business Hours</description>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Queue_User_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BypassInitialQueueClosureRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSM-2565: DATA - DATA US User - Bypass rule that required to be a member of the initial queue to close the case</description>
        <label>Bypass Initial Queue Closure Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ByPassedRestrictFormTier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSM-2266</description>
        <label>Bypassed Restrict Form Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Duplicate_E2C_VR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSM-1205 RD - Enhance the duplicate email2case validation Rule</description>
        <label>Bypass Duplicate E2C VR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C_SAT_Survey_Option__c</fullName>
        <description>As Per CSM-3046</description>
        <label>C-SAT Survey Option</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>R&amp;D Option B</fullName>
                    <label>R&amp;D - Generic question with link to sub survey</label>
                </value>
				<value>
					<fullName>R&amp;D Option Sandoz</fullName>
					<label>R&amp;D - Sandoz survey</label>
				</value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_ReadOnly__c</fullName>
        <formula>User__r.Case_Read_Only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_IQVIA_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For CSM-2011</description>
        <label>Disable IQVIA Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Round_Robin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As per CSM-2415, This will help to determine whether to apply round robin or not.</description>
        <label>Enable Round Robin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Duplicate_Batch_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BCH_CSM_AbandonedDuplicateCases Batch process to add this new filter where Exclude From Duplicate Batch Process is False for RnD Duplicate Cases from E2C.</description>
        <label>Exclude From Duplicate Batch Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>Group Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefaultQueue__c</fullName>
        <description>CSM-1809: All - User Queue Enhancements</description>
        <defaultValue>false</defaultValue>
        <label>Default Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOS__c</fullName>
        <description>CSM-537</description>
        <label>LOS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R_D_E2C_LOS</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastAssignedCaseMilliseconds__c</fullName>
        <description>As per CSM-2415, This fields will store the millisecond when the last case was assigned to this user in a particular queue.</description>
        <label>LastAssignedCaseMilliseconds</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastAssignedCaseTime__c</fullName>
        <description>As per, CSM- 2415. This will store the datetime when the last case was assigned to this user in particular queue.</description>
        <label>LastAssignedCaseTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Low_Email_Notification_frequency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As per CSM-2479.</description>
        <label>Low Email Notification frequency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutOfOffice_EndDate__c</fullName>
        <description>As Per CSM-2415.</description>
        <label>OutOfOffice_EndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutOfOffice_StartDate__c</fullName>
        <description>As per CSM-2415.</description>
        <label>OutOfOffice_StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Out_Of_Office_Notification__c</fullName>
        <description>PRM-1015: Send Out office Notification to end user when checkbox is checked.</description>
        <defaultValue>false</defaultValue>
        <label>Out Of Office Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pillar__c</fullName>
        <description>CSM-1809: All - User Queue Enhancements</description>
        <formula>CASE(1,IF(BEGINS(LOWER(Name), &apos;data&apos;),1,0), &apos;Information Offering&apos;, IF(BEGINS(LOWER(Name), &apos;rnd&apos;),1,0), &apos;R&amp;D&apos;, IF(BEGINS(LOWER(Name), &apos;tech&apos;),1,0), &apos;Technology Solutions&apos;,&apos;&apos;)</formula>
        <label>Pillar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Queue Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <description>CSM - ACN - S-0007 - Queue Name</description>
        <label>Queue Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Email__c</fullName>
        <label>Queue Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Queue_Emails_Text__c</fullName>
        <description>CSM-209 RnD-Email from field</description>
        <inlineHelpText>Enter email addresses separated by semi colon(;)</inlineHelpText>
        <label>Queue Emails Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestrictFromQueues__c</fullName>
        <description>CSM-2079: TECH - Escalation form for T2 =&gt; T3
Restrict From Queues you have selected.
Example : If Current Queue = Tech Global Application Support T2 and destination queue is one of the below:

Tech GLOBAL Product Support T3
Tech Global Application Support SME T2
Tech Global Application Services</description>
        <label>Restrict From Queues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RestrictFromTier__c</fullName>
        <label>Restrict TS Form Tier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
                <value>
                    <fullName>T4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SenderAddress__c</fullName>
        <label>SenderAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_QueueUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TECH_QueueUser</label>
        <referenceTo>Queue_User_Relationship__c</referenceTo>
        <relationshipLabel>Queue User Relationship</relationshipLabel>
        <relationshipName>Queue_User_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_UserGroupIdCombination__c</fullName>
        <formula>CASESAFEID(User__c)+ Group_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_UserGroupIdCombination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>CSM-1809: All - User Queue Enhancements</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <formula>User__r.Email</formula>
        <label>User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Notification_Setup__c</fullName>
        <formula>IF ( INCLUDES ( User__r.Case_Comment_Work_Note__c , &quot;Dispatch - Email&quot; ), &quot;Dispatch - Email; &quot;,null ) &amp;
IF ( INCLUDES ( User__r.Case_Comment_Work_Note__c , &quot;Dispatch - Bell&quot; ), &quot;Dispatch - Bell; &quot;,null ) &amp;
IF ( INCLUDES ( User__r.Case_Comment_Work_Note__c, &quot;Assignment - Email&quot; ), &quot;Assignment - Email; &quot;,null ) &amp;
IF ( INCLUDES ( User__r.Case_Comment_Work_Note__c , &quot;Assignment - Bell&quot; ), &quot;Assignment - Bell; &quot;,null ) &amp;
IF ( INCLUDES ( User__r.Case_Comment_Work_Note__c , &quot;Comment - Bell&quot; ), &quot;Comment - Bell; &quot;,null ) &amp;
IF ( INCLUDES ( User__r.Case_Comment_Work_Note__c , &quot;Comment - Email&quot; ), &quot;Comment - Email; &quot;,null ) &amp;
IF ( INCLUDES ( User__r.Case_Comment_Work_Note__c , &quot;Milestone Alert - Email&quot; ), &quot;Milestone Alert - Email; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Notification Setup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSM - ACN - S-0007 - User Lookup</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queue_User_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Queue User Relationship</label>
    <nameField>
        <label>Queue User Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queue User Relationship</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMS_VR01_ACN_QueueNameMatch</fullName>
        <active>false</active>
        <description>CSM - ACN - Queue name match queue selected</description>
        <errorConditionFormula>NOT(Name  =  TEXT( QueueName__c ))</errorConditionFormula>
        <errorMessage>Name does not match Queue Name, Please enter correct name.</errorMessage>
    </validationRules>
</CustomObject>